# tabsel

./: .gitignore  Cargo.toml  README.md  flake.nix  test-theme.scss
docs/examples/: catppuccin.scss  minimal.scss  rounded.scss  tabsel-default.nix
src/: main.rs
src/app/: mod.rs  state.rs
src/app/style/: mod.rs
src/app/style/rows/: mod.rs
src/app/style/scrollable/: mod.rs
src/app/style/search/: mod.rs
src/config/: grammar.pest  helpers.rs  inheritance.rs  mod.rs
src/data/: mod.rs  output.rs  parse.rs
