[package]
name = "tabsel"
version = "0.1.0"
authors = ["Talia <paradox.m.burgess@gmail.com>"]
edition = "2018"
resolver = "2"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Talia-12/tabsel"
categories = ["gui", "command-line-utilities"]
keywords = ["table", "selector", "dmenu", "wayland", "tabsel"]
description = """
A dmenu-like table selector for Wayland. Reads tabular data from stdin, displays it as a table, and outputs the selection to stdout.
"""

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["iced/wgpu", "iced/palette"]
debug = ["iced/debug"]

[dependencies]
iced = { version = "0.12.1", features = ["wgpu", "palette", "svg", "image", "tokio"] }
iced_core = "0.12.3"
iced_runtime = "0.12.1"
iced_style = "0.12.1"
tokio = { version = "1.29.1", features = ["macros", "io-util"] }

clap = { version = "^4", features = ["derive"] }
csv = "1"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

libc = "0.2"
once_cell = "^1"
anyhow = "^1"
dirs = "^5"
thiserror = "^1"

serde = { version = "^1", features = ["derive"] }
serde_json = { version = "1.0.99", features = ["preserve_order"] }
pest = "2.7.0"
pest_derive = "2.7.0"

[dev-dependencies]
speculoos = "0.11.0"
pretty_assertions = "1.2.1"
